modfied dashboards testsuite, added login to dashboards test

--- a/selenium/dashboards/Dashboards_Testsuite.html
+++ b/selenium/dashboards/Dashboards_Testsuite.html
@@ -8,9 +8,9 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="../../../../../.././create_dashboard.xml">create_dashboard</a></td></tr>
-<tr><td><a href="../edit_dashboard.xml">edit_dashboard</a></td></tr>
-<tr><td><a href="../../../../../.././delete_dashboard.xml">delete_dashboard</a></td></tr>
+<tr><td><a href="../inputs/login.xml">login</a></td></tr>
+<tr><td><a href="create_dashboard.xml">create_dashboard</a></td></tr>
+<tr><td><a href="delete_dashboard.xml">delete_dashboard</a></td></tr>
 </tbody></table>
 </body>
 </html>
