fix input tests

--- a/selenium/inputs/Inputs_Testsuite.html
+++ b/selenium/inputs/Inputs_Testsuite.html
@@ -8,7 +8,7 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="login_logout.xml">login_logout</a></td></tr>
+<tr><td><a href="login.xml">login</a></td></tr>
 <tr><td><a href="create_local_input.xml">create_local_input</a></td></tr>
 <tr><td><a href="stop_start_input.xml">stop_start_input</a></td></tr>
 <tr><td><a href="create_global_input.xml">create_global_input</a></td></tr>
