--- a/selenium/streams/Streams_Testsuite.html
+++ b/selenium/streams/Streams_Testsuite.html
@@ -8,7 +8,7 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="../inputs/login.xml">login</a></td></tr>
+<tr><td><a href="../common/login.xml">login</a></td></tr>
 <tr><td><a href="create_stream.xml">create_stream</a></td></tr>
 <tr><td><a href="add_stream_rule.xml">add_stream_rule</a></td></tr>
 <tr><td><a href="delete_stream.xml">delete_stream</a></td></tr>
