Adding logout test case to all test suites.

--- a/selenium/dashboards/Dashboards_Testsuite.html
+++ b/selenium/dashboards/Dashboards_Testsuite.html
@@ -11,6 +11,7 @@
 <tr><td><a href="../common/login.xml">login</a></td></tr>
 <tr><td><a href="create_dashboard.xml">create_dashboard</a></td></tr>
 <tr><td><a href="delete_dashboard.xml">delete_dashboard</a></td></tr>
+<tr><td><a href="../common/logout.xml">logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
