--- a/selenium/streams/Streams_Testsuite.html
+++ b/selenium/streams/Streams_Testsuite.html
@@ -12,6 +12,7 @@
 <tr><td><a href="create_stream.xml">create_stream</a></td></tr>
 <tr><td><a href="add_stream_rule.xml">add_stream_rule</a></td></tr>
 <tr><td><a href="delete_stream.xml">delete_stream</a></td></tr>
+<tr><td><a href="../common/logout.xml">logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
