--- a/selenium/inputs/Inputs_Testsuite.html
+++ b/selenium/inputs/Inputs_Testsuite.html
@@ -16,6 +16,7 @@
 <tr><td><a href="delete_global_input.xml">delete_global_input</a></td></tr>
 <tr><td><a href="Start_input.xml">Start_input</a></td></tr>
 <tr><td><a href="Stop_input.xml">Stop_input</a></td></tr>
+<tr><td><a href="../common/logout.xml">logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
