add login logout to authentication test

--- a/selenium/authentication/Authentication_Testsuite.html
+++ b/selenium/authentication/Authentication_Testsuite.html
@@ -8,12 +8,12 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="../../../../../../../common/login.xml">login</a></td></tr>
+<tr><td><a href="../common/login.xml">login</a></td></tr>
 <tr><td><a href="add_user.xml">add_user</a></td></tr>
 <tr><td><a href="add_adminuser.xml">add_adminuser</a></td></tr>
 <tr><td><a href="delete_user.xml">delete_user</a></td></tr>
 <tr><td><a href="delete_adminuser.xml">delete_adminuser</a></td></tr>
-<tr><td><a href="../../../../../../../common/logout.xml">logout</a></td></tr>
+<tr><td><a href="../common/logout.xml">logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
